--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <title>The Bukz</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -13,11 +12,12 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
-    <link rel="stylesheet" href="/css/homepage.css" />
-    <link rel="stylesheet" href="/css/managebooks.css" />
-    <link rel="stylesheet" href="/css/bookinfo.css" />
-    <link rel="stylesheet" href="css/addbook.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/homepage.css">
+    <link rel="stylesheet" href="/css/bookinfo.css">
+    <link rel="stylesheet" href="/css/addbook.css">
+    <link rel="stylesheet" href="/css/managebooks.css">
+    <link rel="stylesheet" href="/css/about.css">
     <script src="/js/app.js"></script>
     <script src="/js/user.service.js"></script>
     <script src="/js/book.service.js"></script>
@@ -74,15 +74,19 @@
     <div id="signInModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
 
-            <!-- Modal content-->
+            <!-- Auth modal content-->
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Sign In With : </h4>
                 </div>
-                <div class="modal-body text-center">
-                    <button class="btn btn-danger btn-lg" ng-click="signInWithGoogle()"><i class="fa fa-google" aria-hidden="true"></i> Google</button>
-                    <button class="btn btn-primary btn-lg" ng-click="signInWithFacebook()"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</button>
+                <div class="modal-body text-center row">
+                    <div class="col-md-12">
+                        <button class="btn btn-lg btn-google btn-auth" ng-click="signInWithGoogle()"><i class="fa fa-google-plus" aria-hidden="true"></i> Sign in with Google</button>
+                    </div>
+                    <div class="col-md-12">
+                        <button class="btn btn-lg btn-facebook btn-auth" ng-click="signInWithFacebook()"><i class="fa fa-facebook" aria-hidden="true"></i> Sign in with Facebook</button>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
