--- a/public/home.html
+++ b/public/home.html
@@ -1,12 +1,15 @@
-<section class="container-fluid">
-    <div class="homepage-center">
-        <a href="#!/book/{{book.$id}}" ng-repeat="book in books" class="homepage-book-card">
-            <img ng-src="{{book.imageUrl}}" alt="Image for {{book.bookName}}"  class="img-responsive"/>
-            <h3>{{book.bookName}}</h3>
-            <h4>by {{book.authorName}}</h4>
-            <h4>{{book.edition}}</h4>
-            <h4>{{book.price | currency:"&#8377;"}}</h4>
-            <h4>{{book.publication}}</h4>
+<section class="container homepage">
+    <div class="row">
+        <a href="#!/book/{{book.$id}}" ng-repeat="book in books" class="card col-md-3">
+            <div class="row">
+                <div class="col-md-12 col-xs-6 image-container">
+                    <img ng-src="{{book.imageUrl}}" alt="Image for {{book.bookName}}" class="homepage-image" />
+                </div>
+                <div class="col-md-12 col-xs-6 card-content">
+                    <p><h5><b>{{book.bookName}}</b></h5> {{book.binding}}, {{book.authorName}}</p>
+                    <h4>{{book.price | currency:"&#8377;"}}</h4>
+                </div>
+            </div>
         </a>
     </div>
 </section>
