--- a/public/index.html
+++ b/public/index.html
@@ -37,13 +37,18 @@
         <div class="container">
             <div class="row row1">
                 <ul class="largenav pull-right">
-                    <li class="upper-links"><a class="links" href="#!/about">About Us</a></li>
-                    <li class="upper-links"><a class="links" ng-show="getAuth()" href="#!/dashboard/manage-books">Manage Books</a></li>
-                    <li class="upper-links"><a class="links" href="#!/addbukz" ng-show="getAuth()" ng-click="hideAddBook()">Add Book</a></li>
+                    <li class="upper-links"><a class="links" href="#!/about">About Us</a>
+                    </li>
+                    <li class="upper-links"><a class="links" ng-show="getAuth()" href="#!/dashboard/manage-books">Manage Books</a>
+                    </li>
+                    <li class="upper-links"><a class="links" href="#!/addbukz" ng-show="getAuth()" ng-click="hideAddBook()">Add Book</a>
+                    </li>
                     <li class="upper-links dropdown" ng-show="getAuth()"><a class="links" href="#"><i class="fa fa-user" aria-hidden="true"></i> {{displayName}}</a>
                         <ul class="dropdown-menu">
-                            <li class="profile-li"><a class="profile-links" href="#!/register">Edit Profile</a></li>
-                            <li class="profile-li"><a class="profile-links" ng-click="signOut()">Sign Out</a></li>
+                            <li class="profile-li"><a class="profile-links" href="#!/register">Edit Profile</a>
+                            </li>
+                            <li class="profile-li"><a class="profile-links" ng-click="signOut()">Sign Out</a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
