--- a/public/home.html
+++ b/public/home.html
@@ -1,5 +1,5 @@
 <section class="container homepage">
-    <a href="#!/book/{{book.$id}}" ng-repeat="book in books" class="card col-md-3">
+    <a href="#!/book/{{book.$id}}" ng-repeat="book in books | filter:searchText" class="card col-md-3">
         <div class="row">
             <div class="col-md-12 col-xs-6 image-container">
                 <img ng-src="{{book.imageUrl}}" alt="Image for {{book.bookName}}" class="homepage-image" />
